[BZ#748546] Relative font-size (smaller, larger) not supported, text disappear
Submitted by Perhelion
Link to original bug (#748546)
Description
This is a report on Wikimedia, bumping upstream: see http://phabricator.wikimedia.org/T88833
In a nutshell:
is the same one as this without font-size "smaller":
As Aklapper there mentioned, relative font-size is currently not supported, but the strange behavior is, that the text completely disappear. Look in the code: http://git.gnome.org/browse/librsvg/tree/rsvg-css.c#n259