gitlab#108 - Support font-size:larger and font-size:smaller

https://gitlab.gnome.org/GNOME/librsvg/issues/108